# TypeTreeFlow

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  environment.yml  pyproject.toml  typetreeflow.env.example  typetreeflow.py
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  completion_audit.md  contracts.md  cookbook.md  design.md  development.md  docs_inventory.md  docs_simplification_plan.md  external_type_genome_ingestion.md  external_workflow_cookbook.md  fusobacterium_external_pilot.md  fusobacterium_real_pilot_template.md  guide.md  handoff_index_contract.md  index.md  local_artifact_normalization_design.md  lpsn_first_acquisition.md  maintenance.md  ncbi_candidate_discovery_plan.md  output_layout.md  policy.md  pr_description_v2_2_x.md  provider_automation_feasibility.md  provider_automation_policy.md  real_run_checklist.md  reference.md  release_checklist.md  release_notes_v2_2_x.md  release_process.md  release_verification.md  results_policy.md  schemas.md  species_checklist_audit.md  species_checklist_implementation_plan.md  stable_contracts.md  statuses.md  v0_9_0_provider_adapter_spike_plan.md  v1_0_0_readiness_review.md  v2_0_0_provider_automation_framework.md  v2_2_3_expanded_discovery_baseline.md  (+1 more)
docs/architecture/: ai_first_simplification_audit.md  cli_and_config.md  index.md  (+14 more)
examples/: assembly_candidates_minimal.tsv  external_genomes_minimal.tsv  minimal_config.yml  provider_request_minimal.tsv  species_checklist_minimal.tsv  user_selection_minimal.tsv
scripts/: check_docs_hygiene.py  check_release_consistency.py  check_workspace_hygiene.py  release_gate.py
tests/: conftest.py  test_ani_parse.py  test_ani_plan.py  test_ani_plot.py  test_ani_summary.py  test_ani_workflow.py  test_assembly_candidates.py  test_bacdive_evidence.py  test_barrnap.py  test_biosample_enrichment.py  test_cli_acquisition.py  test_cli_barrnap.py  test_cli_completion.py  test_cli_config.py  test_cli_downloads.py  test_cli_external_genomes.py  test_cli_fastani.py  test_cli_manual_review.py  test_cli_phylo.py  test_cli_pipeline.py  test_cli_provider_plan.py  test_cli_query_genome.py  test_cli_report_only.py  test_cli_selection.py  test_cli_species_checklist.py  test_cli_strict_gating.py  test_completion.py  test_completion_gaps.py  test_culture_collections.py  test_delivery.py  test_diagnostics_cli.py  test_docs_consistency.py  test_docs_hygiene_script.py  test_download_execution.py  test_end_to_end_smoke.py  test_entrez_client.py  test_entrez_fallback.py  test_entrez_integration.py  test_env.py  test_evidence_policy.py  (+49 more)
typetreeflow/: __init__.py  cli.py  cli_config.py  cli_parser.py  completion.py  completion_gaps.py  config.py  delivery.py  diagnostics.py  env.py  evidence_policy.py  exceptions.py  expanded_discovery.py  external_genomes.py  local_query.py  logging_utils.py  manifest.py  manual_review_cli.py  models.py  naming.py  provider_plan.py  release_check.py  release_verification.py  strict_gating_cli.py
(+130 files in other folders)
