[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "typetreeflow"
version = "0.1.0"
description = "CLI workflow skeleton for type strain genome and 16S phylogeny analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "TypeTreeFlow developers" }
]
dependencies = [
  "biopython",
  "pandas",
  "seaborn"
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest"]

[project.scripts]
typetreeflow = "typetreeflow.cli:main"

[tool.setuptools.packages.find]
include = ["typetreeflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
