[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "typetreeflow"
version = "2.2.10"
description = "CLI workflow skeleton for type strain genome and 16S phylogeny analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "TypeTreeFlow developers" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "biopython",
  "pandas",
  "seaborn"
]

[project.optional-dependencies]
lpsn = ["lpsn>=1.0.0"]
test = ["pytest"]
dev = ["lpsn>=1.0.0", "pytest"]

[project.scripts]
typetreeflow = "typetreeflow.cli:main"

[tool.setuptools.packages.find]
include = ["typetreeflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
